added accordion-list component

--- a/sample/accordions.html
+++ b/sample/accordions.html
@@ -67,12 +67,12 @@
                 </ol>
 
                 <div class="row">
-                    <div class="half">
+                    <div class="col-md-6">
                         <h1>Accordion</h1>
                         <h2>Example:</h2>
                         <!--#include virtual="/sample/modules/accordion.html" -->
                     </div>
-                    <div class="half">
+                    <div class="col-md-6">
                         <h3><label for="sample-accordion">Source Code:</label></h3>
                         <textarea id="sample-accordion" class="form-control" rows="10"
                             cols="80"><!--#include virtual="/sample/modules/accordion.html" --></textarea>
@@ -82,8 +82,8 @@
 
 
                 <hr />
-                <div class="group p-b-lg">
-                    <div class="half">
+                <div class="row p-b-lg">
+                    <div class="col-md-6">
                         <h2>Accordion Side Menu</h2>
                         <p>
                             Accordion side menu is a vertical navigation component which apart from traditional, text
@@ -95,10 +95,29 @@
                         <h2>Example:</h2>
                         <!--#include virtual="/sample/modules/nav-side.html" -->
                     </div>
-                    <div class="half">
+                    <div class="col-md-6">
                         <h3><label for="sample-side-menu">Source Code:</label></h3>
                         <textarea id="sample-side-menu" class="form-control" rows="10" cols="80"><!--#include virtual="/sample/modules/nav-side.html" -->
                                                  </textarea>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <h2>Accordion List</h2>
+                        <p>
+                            Accordion lists are commonly used for things like FAQ's where the title exposes the
+                            description in an expanding menu fashion.
+                            Accordion List uses HTML5 roles, some ARIA properties, and IDs for accessibility.
+                        </p>
+                        <h2>Example:</h2>
+                        <!--#include virtual="/sample/modules/accordion-list.html" -->
+                    </div>
+                    <div class="col-md-6">
+                        <h3><label for="sample-accordion-list">Source Code:</label></h3>
+                        <textarea id="sample-accordion-list" class="form-control" rows="10" cols="80">
+<!--#include virtual="/sample/modules/accordion-list.html" -->
+</textarea>
                     </div>
                 </div>
 
