updated update page

--- a/update.html
+++ b/update.html
@@ -120,14 +120,9 @@
     └── fonts/
     └── images/
     ├── js/
-    │   ├── libs/
-    │   │   ├── html5shiv.min.js
-    │   │   ├── selectivizr-min.js
-    │   │   ├── jquery-migrate-3.0.1.js
-    │   │   ├── jquery.js
-    │   │   ├── respond.min.js
-    │   │   └── selectivizr-min.js
+    │   ├── bootstrap.min.js.map
     │   ├── cagov.core.js
+    │   ├── cagov.core.min.js
     │   └── search.js
     └── sample/
     └── source/
@@ -153,7 +148,7 @@
     └── css/
     └── fonts/
     └── images/
-    └──  js/
+    └── js/
     └── sample/
     └── source/
     ├── ssi/
