updated accordion styles, renmoved js styles from accordion script

--- a/sample/accordions.html
+++ b/sample/accordions.html
@@ -74,10 +74,8 @@
                             cols="80"><!--#include virtual="/sample/modules/accordion.html" --></textarea>
                     </div>
                 </div>
-                <hr />
+                <hr class="m-t-md" />
 
-
-                <hr />
                 <div class="row p-b-lg">
                     <div class="col-md-6">
                         <h2>Accordion Side Menu</h2>
